--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "torch>=2.8.0",
     "tokenizers>=0.21.4",
     "transformers>=4.55.4",
+    "vector-quantize-pytorch>=1.23.1",
 ]
 
 [dependency-groups]
