--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
   "pytest-testmon",
   "pytest-xdist",
   "nbmake",
+  "taskipy>=1.14.1",
 ]
 
 [tool.uv]
@@ -61,3 +62,25 @@ torch = [
   { index = "pytorch", marker = "sys_platform == 'linux'" },
   { index = "pypi", marker = "sys_platform == 'darwin'" },
 ]
+
+[tool.taskipy.tasks]
+test = "pytest -q"
+lint = "ruff check --fix src"
+train = """
+python scripts/train_episodes.py train \
+  --steps 5000 --base10 --batch_size 512 --d_model 256 \
+  --save_dir runs/episodes_b10 \
+  --ckpt_every 500 --log_every 100 \
+  --lr 8e-5 --sched cosine --warmup_ratio 0.03 --min_lr 1e-6 \
+  --ema_decay 0.995 --weight_decay 0.003 --label_smoothing 0.03 \
+  --lambda_vq 0.25 --lambda_stop 0.3
+"""
+setup = """
+sudo apt update && sudo apt upgrade -y
+sudo apt install tmux -y
+cd /workspace/concept-learner/
+tmux new -s train
+uv run task train | tee /var/log/train.log
+"""
+attach = "tmux attach -t train"
+logs = "tail -f /var/log/train.log"
