--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ python scripts/train_episodes.py train \
   --ema_decay 0.995 --weight_decay 0.003 --label_smoothing 0.03 \
   --lambda_vq 0.25 --lambda_stop 0.3 \
   --max_number 100 --train_range 0-79 --ood_range 80-99 \
+  --frozen_mix --mix_ratio_id 0.55 --mix_ratio_bd 0.20 --mix_ratio_cf 0.05 \
   --resume runs/episodes_b10/latest.pt
 """
 setup = """
