--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,14 +68,14 @@ test = "pytest -q"
 lint = "ruff check --fix src"
 train = """
 python scripts/train_episodes.py train \
-  --steps 5000 --base10 --batch_size 512 --d_model 256 \
+  --steps 15000 --base10 --batch_size 512 --d_model 256 \
   --save_dir runs/episodes_b10 \
   --ckpt_every 500 --log_every 100 \
   --lr 8e-5 --sched cosine --warmup_ratio 0.03 --min_lr 1e-6 \
   --ema_decay 0.995 --weight_decay 0.003 --label_smoothing 0.03 \
   --lambda_vq 0.25 --lambda_stop 0.3 \
   --max_number 100 --train_range 0-79 --ood_range 80-99 \
-  --frozen_mix --mix_ratio_id 0.55 --mix_ratio_bd 0.20 --mix_ratio_cf 0.05 \
+  --frozen_mix --mix_ratio_id 0.45 --mix_ratio_bd 0.20 --mix_ratio_ood 0.25 --mix_ratio_cf 0.05 \
   --resume runs/episodes_b10/latest.pt
 """
 setup = """
