--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,6 +107,7 @@ python scripts/train_episodes.py train \
   --max_number 100 --train_range 0-79 --ood_range 80-99 \
   --frozen_mix --mix_ratio_id 0.45 --mix_ratio_bd 0.20 --mix_ratio_ood 0.25 --mix_ratio_cf 0.05 \
   --replay_max_items 2048 --proto_beta 0.95 --proto_warmup 100 \
+  --log_fantasies 5 --ods_avg_drop 0.05 --ods_vq_chg 0.4 \
   --mine_min_support 8 --mine_max_len 3
 """
 train = """
@@ -121,6 +122,7 @@ python scripts/train_episodes.py train \
   --frozen_mix --mix_ratio_id 0.45 --mix_ratio_bd 0.20 --mix_ratio_ood 0.25 --mix_ratio_cf 0.05 \
   --replay_max_items 2048 --proto_beta 0.95 --proto_warmup 100 \
   --mine_min_support 8 --mine_max_len 3 \
+  --log_fantasies 5 --ods_avg_drop 0.05 --ods_vq_chg 0.4 \
   --resume runs/episodes_b10/latest.pt
 """
 setup = """
